MODDATAIMP-1248 - Upgrade data-import-utils to Vert.x 5.0 and RMB v36.0.0 (#61)