@@ -73,7 +73,7 @@ public class RestUtilTest {
   @Test
   public void shouldValidateFailedAsyncResult() {
     AsyncResult<RestUtil.WrappedResponse> failedAsyncResult = getAsyncResult(null, new IOException(), false, true);
-    Promise promise = Promise.promise();
+    Promise<RestUtil.WrappedResponse> promise = Promise.promise();
     assertFalse(RestUtil.validateAsyncResult(failedAsyncResult, promise));
     assertTrue(promise.future().failed());
     assertTrue(promise.future().cause() instanceof IOException);
@@ -82,7 +82,7 @@ public class RestUtilTest {
   @Test
   public void shouldValidateNullAsyncResult() {
     AsyncResult<RestUtil.WrappedResponse> nullAsyncResult = getAsyncResult(null, null, true, false);
-    Promise promise = Promise.promise();
+    Promise<RestUtil.WrappedResponse> promise = Promise.promise();
     assertFalse(RestUtil.validateAsyncResult(nullAsyncResult, promise));
     assertTrue(promise.future().failed());
     assertTrue(promise.future().cause() instanceof BadRequestException);
@@ -92,7 +92,7 @@ public class RestUtilTest {
   public void shouldValidateNotFoundAsyncResult() {
     RestUtil.WrappedResponse response = new RestUtil.WrappedResponse(404, "", null);
     AsyncResult<RestUtil.WrappedResponse> notFoundAsyncResult = getAsyncResult(response, null, true, false);
-    Promise promise = Promise.promise();
+    Promise<RestUtil.WrappedResponse> promise = Promise.promise();
     assertFalse(RestUtil.validateAsyncResult(notFoundAsyncResult, promise));
     assertTrue(promise.future().failed());
     assertTrue(promise.future().cause() instanceof NotFoundException);
@@ -102,7 +102,7 @@ public class RestUtilTest {
   public void shouldValidateInternalErrorAsyncResult() {
     RestUtil.WrappedResponse response = new RestUtil.WrappedResponse(500, "", null);
     AsyncResult<RestUtil.WrappedResponse> internalErrorAsyncResult = getAsyncResult(response, null, true, false);
-    Promise promise = Promise.promise();
+    Promise<RestUtil.WrappedResponse> promise = Promise.promise();
     assertFalse(RestUtil.validateAsyncResult(internalErrorAsyncResult, promise));
     assertTrue(promise.future().failed());
     assertTrue(promise.future().cause() instanceof InternalServerErrorException);
@@ -112,7 +112,7 @@ public class RestUtilTest {
   public void shouldValidateOKAsyncResult() {
     RestUtil.WrappedResponse response = new RestUtil.WrappedResponse(200, "", null);
     AsyncResult<RestUtil.WrappedResponse> okAsyncResult = getAsyncResult(response, null, true, false);
-    Promise promise = Promise.promise();
+    Promise<RestUtil.WrappedResponse> promise = Promise.promise();
     assertTrue(RestUtil.validateAsyncResult(okAsyncResult, promise));
     assertFalse(promise.future().isComplete());
   }
@@ -121,7 +121,7 @@ public class RestUtilTest {
   public void shouldValidateCreatedAsyncResult() {
     RestUtil.WrappedResponse response = new RestUtil.WrappedResponse(201, "", null);
     AsyncResult<RestUtil.WrappedResponse> createdAsyncResult = getAsyncResult(response, null, true, false);
-    Promise promise = Promise.promise();
+    Promise<RestUtil.WrappedResponse> promise = Promise.promise();
     assertTrue(RestUtil.validateAsyncResult(createdAsyncResult, promise));
     assertFalse(promise.future().isComplete());
   }
@@ -130,7 +130,7 @@ public class RestUtilTest {
   public void shouldValidateNoContentAsyncResult() {
     RestUtil.WrappedResponse response = new RestUtil.WrappedResponse(204, "", null);
     AsyncResult<RestUtil.WrappedResponse> noContentAsyncResult = getAsyncResult(response, null, true, false);
-    Promise promise = Promise.promise();
+    Promise<RestUtil.WrappedResponse> promise = Promise.promise();
     assertTrue(RestUtil.validateAsyncResult(noContentAsyncResult, promise));
     assertFalse(promise.future().isComplete());
   }
@@ -139,7 +139,7 @@ public class RestUtilTest {
   public void shouldValidateBadRequestAsyncResult() {
     RestUtil.WrappedResponse response = new RestUtil.WrappedResponse(422, null, null);
     AsyncResult<RestUtil.WrappedResponse> badRequestAsyncResult = getAsyncResult(response, null, true, false);
-    Promise promise = Promise.promise();
+    Promise<RestUtil.WrappedResponse> promise = Promise.promise();
     assertFalse(RestUtil.validateAsyncResult(badRequestAsyncResult, promise));
     assertTrue(promise.future().failed());
     assertTrue(promise.future().cause() instanceof BadRequestException);
@@ -178,7 +178,7 @@ public class RestUtilTest {
         var requests = WireMock.findAll(
           WireMock.getRequestedFor(WireMock.urlEqualTo("/test-endpoint")));
         assertEquals(1, requests.size());
-        var request = requests.get(0);
+        var request = requests.getFirst();
 
         var tokenHeader = request.getHeader(OKAPI_TOKEN_HEADER);
         assertNull("Token header should be removed when SYSTEM_USER_ENABLED is false", tokenHeader);
@@ -225,7 +225,7 @@ public class RestUtilTest {
         var requests = WireMock.findAll(
           WireMock.getRequestedFor(WireMock.urlEqualTo("/test-endpoint")));
         assertEquals(1, requests.size());
-        var request = requests.get(0);
+        var request = requests.getFirst();
 
         // Verify headers
         assertEquals(token, request.getHeader(OKAPI_TOKEN_HEADER));
